--- a/package.json
+++ b/package.json
@@ -5,27 +5,24 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "@babel/core": "^7.14.5",
-    "@babel/preset-env": "^7.14.5",
-    "@webdiscus/pug-loader": "^2.4.1",
-    "autoprefixer": "^10.2.6",
+    "@babel/core": "^7.18.2",
+    "@babel/preset-env": "^7.18.2",
+    "autoprefixer": "10.4.5",
     "babel-loader": "^8.2.2",
-    "css-loader": "^5.2.6",
-    "html-webpack-plugin": "^5.3.1",
-    "mini-css-extract-plugin": "^0.8.0",
+    "css-loader": "^6.7.1",
     "postcss": "^8.3.2",
     "postcss-loader": "^6.1.0",
-    "pug": "^3.0.2",
-    "style-loader": "^2.0.0",
+    "pug-plugin": "^2.5.1",
     "tailwindcss": "^3.0.24",
-    "webpack": "^5.38.1",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2",
+    "webpack": "^5.72.1",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.9.0",
     "@tailwindcss/typography": "^0.5.1",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/line-clamp": "^0.3.1"
   },
   "scripts": {
-    "dev": "webpack serve"
+    "dev": "webpack serve",
+    "build": "webpack --mode=production"
   }
 }
