--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/line-clamp": "^0.3.1"
   },
+  "devDependencies": {
+    "sass-loader": "^13.0.0",
+    "sass": "^1.52.2"
+  },
   "scripts": {
     "dev": "webpack serve",
     "build": "webpack --mode=production"
